fix: Typo source & target directory

--- a/.github/workflows/configsetup.yml
+++ b/.github/workflows/configsetup.yml
@@ -13,12 +13,6 @@ jobs:
           newname=`echo "$dirname" | sed -e "s/ /_/g"`
           cp "src/main/resources/application.example.properties" "src/main/resources/application.properties"
         done
-    - name: Commit files
+    - name: Rename files
       run: |
-        git config --local user.email "vldcreation21@gmail.com"
-        git config --local user.name "Vicktor Desrony"
-        git commit -m "Setup properties file" -a
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        git mv "src/main/resources/application.example.properties" "src/main/resources/application.properties"
