--- a/.github/workflows/configsetup.yml
+++ b/.github/workflows/configsetup.yml
@@ -15,4 +15,13 @@ jobs:
         done
     - name: Rename files
       run: |
-        mv src/main/resources/application.example.properties src/main/resources/application2.properties
+        git mv src/main/resources/application.example.properties src/main/resources/application2.properties
+    - name: Commit files
+      run: |
+        git config --local user.email "vldcreation21@gmail.com"
+        git config --local user.name "Vicktor Desrony"
+        git commit -m "Setup properties file" -a
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
