fix: Commit in every rename file

--- a/.github/workflows/configsetup.yml
+++ b/.github/workflows/configsetup.yml
@@ -15,6 +15,7 @@ jobs:
         done
     - name: Rename files
       run: |
+        git rm src/main/resources/application.properties
         git mv src/main/resources/application.example.properties src/main/resources/application.properties
     - name: Commit files
       run: |
