--- a/.github/workflows/configsetup.yml
+++ b/.github/workflows/configsetup.yml
@@ -15,7 +15,7 @@ jobs:
         done
     - name: Rename files
       run: |
-        git rm -r --cached --ignore-unmatch src/main/resources/application.properties
+        rm -rf src/main/resources/application.properties
         git mv src/main/resources/application.example.properties src/main/resources/application.properties
     - name: Commit files
       run: |
